# steam-id-discord-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  logging.json  pyproject.toml
destiny_discord_bot/: log_conf.py  persistance.py
steam_id_discord_bot/: __main__.py  join_code.py  log_conf.py
