[tool.poetry]
name = "destiny-discord-bot"
version = "0.1.0"
description = "A package for managing Discord bots specific to Destiny"
authors = ["Jim Hart <jim-hart@users.noreply.github.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
